--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3 
 MarkupSafe==2.1.1 
 Werkzeug==2.0.3 
-tensorflow
+tensorflow-cpu
 pandas==1.4.2
 requests==2.28.0
 numpy
